# mu-raquette

./: .gitignore  Analysis.cc  CMakeLists.txt  Readme.md  event.C  event.h  muRaquette.cc  run1.mac  view.mac  vis.mac
include/: ActionInitializer.hh  Detect.hh  DetectorConstruction.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RaquetteHit.hh  RootData.hh  SensitiveDetector.hh  SensitiveVeto.hh  SourceReader.hh
ressources/: GammaSpec.root
src/: ActionInitializer.cc  Analysis.cc  DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RaquetteHit.cc  RootData.cc  SensitiveDetector.cc  SensitiveVeto.cc  SourceReader.cc
